fix(components): resolve BitPanel issues on Safari #4864 (#4867)

--- a/src/BlazorUI/Bit.BlazorUI/Components/Panel/BitPanel.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/Panel/BitPanel.scss
@@ -6,7 +6,6 @@
     height: 100%;
     display: flex;
     font-weight: 400;
-    position: relative;
     z-index: $zindex-modal;
     font-size: spacing(1.75);
     font-family: $typography-font-family;
